# voice-editor

./: .gitignore  CONTRIBUTING.md  README.md  README_EN.md  TECHNICAL_PATH.md  TUI_DESIGN.md  VOICE_DESIGN_SOP.md  install.sh  pyproject.toml  release.sh
.claude/skills/: tts.md
cli/: app.py
cli/commands/: ai.py  doctor.py  voice.py
configs/: README.md  scripts.json
core/: llm_client.py
docs/: COMMANDS.md  COVER_IMAGE_LOG.md
web/: app.py
web/static/: index.html
