[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "voice-editor"
version = "0.2.0"
description = "VoxCraft 声坊 — 本地中文 TTS 工作台，面向人类、AI 与 agent。"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
license = { text = "Apache-2.0" }
authors = [{ name = "Webkubor" }]

dependencies = [
  "transformers==4.57.3",
  "accelerate==1.12.0",
  "fastapi",
  "uvicorn",
  "python-multipart",
  "librosa",
  "torchaudio",
  "soundfile",
  "sox",
  "onnxruntime",
  "einops",
  "pydub",
  "typer>=0.12",
  "rich>=13.0",
]

[project.urls]
Homepage = "https://github.com/webkubor/voice-editor"
Repository = "https://github.com/webkubor/voice-editor"

[project.scripts]
voice = "cli.app:app"
tts = "cli.app:app"
qwen-tts-demo = "qwen_tts.cli.demo:main"

[tool.setuptools]
packages = { find = { where = ["."] , include = ["qwen_tts*", "cli*", "web*"] } }
include-package-data = true

[tool.setuptools.package-data]
qwen_tts = ["py.typed", "**/*.npz"]
